--- a/BackupMongoDb/BackupMongoDb.csproj
+++ b/BackupMongoDb/BackupMongoDb.csproj
@@ -8,8 +8,6 @@
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<PlatformTarget>x64</PlatformTarget>
 		<PublishSingleFile>true</PublishSingleFile>
-		<IncludeNativeLibrariesForSelfExtract>false</IncludeNativeLibrariesForSelfExtract>
-		<IncludeAllContentForSelfExtract>false</IncludeAllContentForSelfExtract>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -21,9 +19,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AlphaVSS" Version="2.0.3" />
 		<PackageReference Include="MongoDB.Driver" Version="3.5.2" />
 		<PackageReference Include="System.ServiceProcess.ServiceController" Version="10.0.1" />
+		<PackageReference Include="System.Management" Version="10.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Properties\PublishProfiles\" />
 	</ItemGroup>
 
 </Project>
